Fri Mar  5 14:02:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * configure.ac:
          Added test for GCC builtin support

Fri Mar  5 12:40:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
          We did a benchmark on a FC10 64bit system with the GCC builtin support
          for long/unsigned long. In a release/inline build the performance
          results using the GCC builtin support is around 2 times faster than
          when using the ACE assembly version. When we have the GCC builtin support,
          we now also going to use that for long/unsigned long.

Fri Mar  5 12:20:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op.h:
        * ace/Atomic_Op.inl:
        * ace/Atomic_Op_GCC_T.cpp:
        * ace/Atomic_Op_GCC_T.h:
        * ace/Atomic_Op_GCC_T.inl:
          Added new Atomic template for the GCC builtin atomic op support.
          This is used on PPC64/PPC32/IA64 for int/unsigned int/long/unsigned long.
          On EM64T we do use this for int/unsigned int, the ACE assembly version for
          long/unsigned long is faster than the GCC.

          On FC10 64bit the int/unsigned int Atomic_Op is now around 6 to 7 times
          faster than before this change

        * ace/config-g++-common.h:
          Enable the new builtin atomic also for EM64T

        * ace/ace.mpc:
        * ace/Makefile.am:
          Added new files

Fri Mar  5 11:30:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Print the number of iterations

Fri Mar  5 11:28:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Also measure postfix increment/decrement

Fri Mar  5 11:21:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Atomic_Op_Test.cpp:
          Added more checks to make sure Atomic_Op does work
